--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,8 @@ defaults:
 #  uri    : "http://your-site.com"
 #  home   : # null (default), "absolute or relative url to link to author home"
 
-
+plugins:
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
