--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,7 @@ defaults:
 
 plugins:
   - jekyll-remote-theme
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
