--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "adil-salim-56253499"
+  linkedin         : "adil-salim"
   pinterest        :
   soundcloud       :
   stackoverflow    : 
