--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   name             : "Adil Salim"
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Postdoctoral fellow at KAUST"
-  location         : "Al Khwarizmi Bldg 1, King Abdullah University of Science and Technology (KAUST), Thuwal 23955-6900, Kingdom of Saudi Arabia"
+  location         : "Al Khwarizmi Bldg 1, KAUST"
   email            : "adil.salim@kaust.edu.sa"
   uri              :
   bitbucket        :
