--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   name             : "Adil Salim"
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Google Research Fellow (Simons Institute, UC Berkeley)"
-  location         : "Melvin Calvin Lab"
+  location         : "Calvin Lab"
   email            : "salim@berkeley.edu"
   uri              :
   bitbucket        :
