--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ minimal_mistakes_skin: "dark"
 author:
   name             : "Adil Salim"
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Google Research Fellow (Simons Institute, UC Berkeley)"
-  location         : "Calvin Lab"
+  bio              : "Google Research Fellow at Simons Institute"
+  location         : "Calvin Lab, UC Berkeley"
   email            : "salim@berkeley.edu"
   uri              :
   bitbucket        :
