--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   name             : "Adil Salim"
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Sr Researcher at Microsoft Research"
-  location         : "Building 99, 3921, Redmond, WA 98052"
+  location         : "Building 99, 3921"
   email            : "adilsalim@microsoft.com"
   uri              :
   bitbucket        :
