--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ minimal_mistakes_skin: "dark"
 author:
   name             : "Adil Salim"
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Sr Researcher at Microsoft Research"
-  location         : "Building 99, 3922"
+  bio              : "Member of the technical staff at Microsoft AI"
+  location         : "Building 99"
   email            : "adilsalim@microsoft.com"
   uri              :
   bitbucket        :
