--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ minimal_mistakes_skin: "dark"
 author:
   name             : "Adil Salim"
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Member of technical staff at Microsoft AI"
+  bio              : "Member of technical staff at Microsoft"
   location         : "Building 99"
   email            : "adilsalim@microsoft.com"
   uri              :
