--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author:
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Member of technical staff at Microsoft"
   location         : "Building 99"
-  email            : "adilsalim@microsoft.com"
+  email            : "asalim.math@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
